# graph-mpc

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  run_client.cpp  run_server.cpp  subgraph_0.data  subgraph_1.data
.github/workflows/: cmake-multi-platform.yml
algorithms/: bfs.h  bfs_3_parallel.h  custom.h  pi_k.h  pi_m.h  pi_r.h  template.h
benchmarks/: CMakeLists.txt  benchmark.h  benchmark_bfs.cpp  benchmark_bfs_processor.cpp  benchmark_circ.cpp  benchmark_pi_k.cpp  benchmark_pi_m.cpp  benchmark_pi_r.cpp  benchmark_sharing.cpp  benchmark_shuffle.cpp  benchmark_sort.cpp  benchmark_sorting.cpp  benchmark_sw_perm.cpp  shuffle.cpp
certs/: socket_cert.pem  socket_key.pem
cmake/: FindSocket.cmake
scripts/macos/: benchmark_bfs.sh  benchmark_bfs_processor.sh  benchmark_pi_k.sh  benchmark_pi_k_dealer_p0.sh  benchmark_pi_k_dealer_p1.sh  benchmark_pi_m.sh  benchmark_pi_m_dealer_p1.sh  benchmark_sharing.sh  benchmark_shuffle.sh  benchmark_sort.sh  benchmark_sw_perm.sh  test_all.sh  test_deduplication.sh  test_deduplication_dealer_p0.sh  test_deduplication_dealer_p1.sh  test_deduplication_p0_p1.sh  test_mp.sh  test_mp_dealer_p0.sh  test_mp_dealer_p1.sh  test_netiomp.sh  test_pi_k.sh  test_pi_m_dealer_p1.sh  test_pi_m_p0_p1.sh  test_processor.sh  test_processor_dealer_p0.sh  test_processor_dealer_p1.sh  test_processor_p0_p1.sh  test_sharing_p1.sh  test_shuffle.sh  test_shuffle_dealer_p0.sh  test_shuffle_dealer_p1.sh  test_shuffle_new.sh  test_shuffle_new_dealer_p0.sh  test_shuffle_new_dealer_p1.sh  test_shuffle_new_p0_p1.sh  test_shuffle_p0_p1.sh  test_sort.sh  test_sort_dealer_p0.sh  test_sort_dealer_p1.sh  test_sort_p0_p1.sh  (+4 more)
scripts/ubuntu/: test_shuffle.sh
setup/: CMakeLists.txt  comm.h  setup.cpp  setup.h  stats.h  utils.cpp  utils.h
setup/input-sharing/: input_client.h  input_server.h  launch_client.cpp
src/: CMakeLists.txt  compaction.cpp  compaction.h  function_queue.h  graph.h  main.cpp  message_passing.cpp  message_passing.h  mp_protocol.h  perm.h  processor.cpp  processor.h  protocol_config.h  protocol_def.cpp  protocol_def.h  random_generators.cpp  random_generators.h  sharing.cpp  sharing.h  shuffle.cpp  shuffle.h  sorting.h
src/core/: circuit.cpp  circuit.h  evaluator.cpp  evaluator.h  gate.cpp  gate.h  preprocessor.cpp  preprocessor.h  storage.cpp  storage.h
src/core/io/: disk.h  netmp.h  tls_net_io_channel.h
src/data_interface/input-sharing/: input_client.h  input_server.h  launch_client.cpp
src/graphmpc/: add.h  add_const.h  add_weights.h  bit2a.h  circuit.cpp  circuit.h  clip.cpp  clip.h  compaction.cpp  compaction.h  construct_payload.h  deduplication.cpp  deduplication.h  equals_zero.h  evaluator.cpp  evaluator.h  f_queue.cpp  flip.h  function.cpp  function.h  gate.h  gather.h  input.h  merged_shuffle.h  message_passing.cpp  message_passing.h  mp_protocol.cpp  mp_protocol.h  mul.cpp  mul.h  permute.h  preprocessor.cpp  preprocessor.h  propagate.h  reveal.h  shuffle.cpp  shuffle.h  shuffle_repeat.h  sort.cpp  sort.h  (+4 more)
src/io/: comm.h  disk.h  input_client.h  input_server.h  netmp.h  tls_net_io_channel.h
src/protocol/: clip.cpp  clip.h  compaction.cpp  compaction.h  deduplication.cpp  deduplication.h  message_passing.cpp  message_passing.h  permute.cpp  permute.h  shuffle.cpp  shuffle.h  sort.cpp  sort.h  sorting.cpp  sorting.h
src/protocol/combined/: clip.cpp  compaction.cpp  deduplication.cpp  message_passing.cpp  sort.cpp
src/protocol/evaluation/: clip.cpp  compaction.cpp  deduplication.cpp  message_passing.cpp  shuffle.cpp  sort.cpp
src/protocol/preprocessing/: clip.cpp  compaction.cpp  deduplication.cpp  message_passing.cpp  shuffle.cpp  sort.cpp
src/protocol_old/: clip.cpp  clip.h  compaction.cpp  compaction.h  deduplication.cpp  deduplication.h  message_passing.cpp  message_passing.h  permute.cpp  permute.h  shuffle.cpp  shuffle.h  sort.h
src/setup/: cmdline.cpp  cmdline.h  configs.h
src/setup/input-sharing/: input_client.h  input_server.h  launch_client.cpp
src/utils/: comm.h  graph.h  mul.cpp  mul.h  perm.h  permutation.h  preprocessings.h  protocol_config.h  random_generators.cpp  random_generators.h  sharing.cpp  sharing.h  shuffle_preproc.h  stats.h  structs.h  types.h
src/utils_old/: graph.h  mul.cpp  preprocessings.h  sharing.cpp  types.h
tests/: CMakeLists.txt  README.md  constants.h  test.h  test_bfs.cpp  test_bfs_3_parallel.cpp  test_bfs_multiple_sources.cpp  test_compaction.cpp  test_deduplication.cpp  test_disk.cpp  test_eqz.cpp  test_mp.cpp  test_network.cpp  test_perm.cpp  test_pi_k.cpp  test_pi_m.cpp  test_pi_m_clients.cpp  test_pi_m_clients_client.cpp  test_pi_r.cpp  test_processor.cpp  test_sharing.cpp  test_shuffle.cpp  test_socket.cpp  test_sort.cpp  test_sw_perm.cpp
tests/test_bfs/: test_bfs.cpp
tests/test_graph/: CMakeLists.txt
tests/test_mp/: CMakeLists.txt  test_mp.cpp
tests/test_perm/: CMakeLists.txt  main.cpp  test_perm.cpp
tests/test_sharing/: test_sharing.cpp
tests/test_shuffle/: CMakeLists.txt  main.cpp  test_shuffle.cpp
tests/test_sort/: test_sort.cpp
tests/test_sw_perm/: test_sw_perm.cpp
