set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/tests)

set(testbin "")

macro(add_test source_name)
    add_executable(${source_name} ${source_name}.cpp)
    #if(MSVC)
        #target_compile_options(${source_name} PRIVATE /W4 /WX)
    #else()
        #target_compile_options(${source_name} PRIVATE -Wall -Wextra -Wpedantic)
    #endif()
    target_link_libraries(${source_name} Boost::program_options GraphMPC_lib EMPTool GMP nlohmann_json::nlohmann_json)
    target_link_directories(${source_name} PRIVATE ../algorithms)
    target_sources(${source_name} PRIVATE test.h)
    list(APPEND testbin ${source_name})
endmacro()

add_test(test_perm)
# add_test(test_disk)
# add_test(test_network)
add_test(test_bfs)
add_test(test_bfs_multiple_sources)
add_test(test_bfs_3_parallel)
add_test(test_pi_k)
add_test(test_pi_m)
add_test(test_pi_r)
add_test(test_pi_m_clients)
add_test(test_pi_m_clients_client)

add_custom_target(tests)
add_dependencies(tests ${testbin})


file(COPY ../certs DESTINATION ${PROJECT_BINARY_DIR}/tests)
file(COPY ../config DESTINATION ${PROJECT_BINARY_DIR}/tests)
file(COPY subgraph_0.data DESTINATION ${PROJECT_BINARY_DIR}/tests)
file(COPY subgraph_1.data DESTINATION ${PROJECT_BINARY_DIR}/tests)
